--- a/package.json
+++ b/package.json
@@ -31,9 +31,12 @@
     "touch": "^3.1.0"
   },
   "devDependencies": {
+    "@types/figlet": "^1.2.0",
     "@types/inquirer": "0.0.43",
+    "@types/lodash": "^4.14.116",
     "@types/minimist": "^1.2.0",
     "@types/node": "^10.10.1",
+    "@types/touch": "^3.1.0",
     "tslint": "^5.11.0",
     "typescript": "^3.0.3"
   }
