--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Package manager for Cpp.",
   "scripts": {
-    "serve": "tsc && node bin/index.js init",
+    "init": "tsc && node bin/index.js init",
     "build": "tsc --outDir bin",
     "lint": "tslint -c tslint.json 'src/**/*.ts'"
   },
@@ -18,16 +18,11 @@
   },
   "homepage": "https://github.com/LucasLacerdaCL/cpp-package-manager#readme",
   "dependencies": {
-    "@octokit/rest": "^15.12.0",
     "chalk": "^2.4.1",
-    "clear": "^0.1.0",
-    "clui": "^0.3.6",
-    "configstore": "^4.0.0",
     "figlet": "^1.2.0",
     "inquirer": "^6.2.0",
     "lodash": "^4.17.11",
     "minimist": "^1.2.0",
-    "simple-git": "^1.100.0",
     "touch": "^3.1.0"
   },
   "devDependencies": {
