--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "init": "tsc && node bin/index.js init",
     "build": "tsc --outDir bin",
-    "lint": "tslint -c tslint.json 'src/**/*.ts'"
+    "lint": "tslint -c tslint.json 'src/**/*.ts'",
+    "test": "mocha -r ts-node/register src/**/*.spec.ts"
   },
   "repository": {
     "type": "git",
@@ -26,13 +27,19 @@
     "touch": "^3.1.0"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.6",
     "@types/figlet": "^1.2.0",
     "@types/inquirer": "0.0.43",
     "@types/lodash": "^4.14.116",
     "@types/minimist": "^1.2.0",
+    "@types/mocha": "^5.2.5",
     "@types/node": "^10.10.1",
     "@types/touch": "^3.1.0",
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0",
+    "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
-    "typescript": "^3.0.3"
+    "typescript": "^3.0.3",
+    "typings": "^2.1.1"
   }
 }
