Create test in init method

--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "@types/minimist": "^1.2.0",
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.10.1",
+    "@types/sinon": "^5.0.3",
     "@types/touch": "^3.1.0",
     "chai": "^4.2.0",
     "mocha": "^5.2.0",
+    "sinon": "^6.3.5",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "typescript": "^3.0.3",
