--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     ],
     "exclude": [
         "node_modules",
-        "**/*.spec.ts"
+        "**/*.test.ts"
     ],
     "compilerOptions": {
         "module": "commonjs",
