--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "jest --coverage"
   },
   "jest": {
-    "preset": "ts-jest"
+    "preset": "ts-jest",
+    "roots": ["src"]
   },
   "repository": {
     "type": "git",
