--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.0",
   "description": "Package manager for Cpp.",
   "scripts": {
-    "init": "tsc && node bin/index.js init",
     "build": "tsc --outDir bin",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
     "test": "jest --coverage"
+  },
+  "bin": {
+    "cpm": "bin/index.js"
   },
   "jest": {
     "preset": "ts-jest",
@@ -25,23 +27,25 @@
   },
   "homepage": "https://github.com/LucasLacerdaCL/cpp-package-manager#readme",
   "dependencies": {
-    "@types/jest": "^23.3.4",
+    "@types/jest": "^23.3.6",
     "chalk": "^2.4.1",
-    "figlet": "^1.2.0",
+    "figlet": "^1.2.1",
     "inquirer": "^6.2.0",
     "lodash": "^4.17.11",
     "minimist": "^1.2.0",
+    "nodegit": "^0.22.2",
     "ts-jest": "^23.10.4"
   },
   "devDependencies": {
     "@types/figlet": "^1.2.0",
     "@types/inquirer": "0.0.43",
-    "@types/lodash": "^4.14.116",
+    "@types/lodash": "^4.14.117",
     "@types/minimist": "^1.2.0",
-    "@types/node": "^10.11.4",
+    "@types/node": "^10.11.7",
+    "@types/nodegit": "^0.22.3",
     "jest": "^23.6.0",
     "tslint": "^5.11.0",
-    "typescript": "^3.1.1",
+    "typescript": "^3.1.3",
     "typings": "^2.1.1"
   }
 }
