--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "tsc --outDir bin",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "publish": "npm run lint && npm run build "
   },
   "bin": {
     "cpm": "bin/index.js"
