--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "tsc --outDir bin",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "codecov": "codecov -t a1aa3c08-228e-4945-8b91-11d7104dced3"
   },
   "bin": {
     "cpm": "bin/index.js"
@@ -37,13 +38,14 @@
   "devDependencies": {
     "@types/figlet": "^1.2.0",
     "@types/inquirer": "0.0.43",
+    "@types/jest": "^23.3.6",
     "@types/lodash": "^4.14.117",
     "@types/minimist": "^1.2.0",
     "@types/node": "^10.11.7",
     "@types/nodegit": "^0.22.3",
-    "@types/jest": "^23.3.6",
-    "ts-jest": "^23.10.4",
+    "codecov": "^3.1.0",
     "jest": "^23.6.0",
+    "ts-jest": "^23.10.4",
     "tslint": "^5.11.0",
     "typescript": "^3.1.3",
     "typings": "^2.1.1"
