Refactor the project to handle exceptions and operate in async mode

--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "preset": "ts-jest",
     "roots": [
       "src"
+    ],
+    "collectCoverageFrom": [
+      "src/options/**/*.ts"
     ]
   },
   "repository": {
