--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "@types/figlet": "^1.2.0",
+    "@types/glob": "^7.1.1",
     "@types/inquirer": "0.0.43",
     "@types/jest": "^23.3.6",
     "@types/lodash": "^4.14.117",
